--- a/git-course/index.html
+++ b/git-course/index.html
@@ -10,6 +10,8 @@
 
 <body>
 	<h1>Hello git</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequuntur possimus blanditiis amet alias quia
+		consectetur quibusdam consequatur sapiente autem?</p>
 </body>
 
 </html>
