--- a/git-course/index.html
+++ b/git-course/index.html
@@ -12,6 +12,14 @@
 	<h1>Hello git</h1>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequuntur possimus blanditiis amet alias quia
 		consectetur quibusdam consequatur sapiente autem?</p>
+		
+	<h2>My favorite cars</h2>
+	<ul>
+		<li>BMW</li>
+		<li>Mers</li>
+		<li>Audi</li>
+		<li>Mazda</li>
+	</ul>	
 </body>
 
 </html>
